test/neg/neg-serial7.errc
All arguments to UPCXX_SERIALIZED_VALUES must be Serializable
